--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,6 +8,10 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <usageGroupingRuleProvider implementation="com.github.eaghayi.clusterusages.gui.UniqueGroupingRuleProvider"/>
+    </extensions>
+
+    <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.github.eaghayi.clusterusages.services.MyApplicationService"/>
         <projectService serviceImplementation="com.github.eaghayi.clusterusages.services.MyProjectService"/>
     </extensions>
