--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,7 +8,7 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <usageGroupingRuleProvider implementation="com.github.eaghayi.clusterusages.gui.UniqueGroupingRuleProvider"/>
+        <usageGroupingRuleProvider implementation="gui.UniqueGroupingRuleProvider"/>
     </extensions>
 
 <!--    <extensions defaultExtensionNs="com.intellij">-->
