add plugin icon update READ.ME to add project description published a new version on marketplace

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,7 @@
 <idea-plugin>
     <id>com.github.eaghayi.clusterusages</id>
-    <name>cluster-usages</name>
+    <name>Cluster Usages</name>
+    <description>adfasd</description>
     <vendor>eaghayi</vendor>
 
     <!-- Product and plugin compatibility requirements -->
