--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,10 @@ pluginGroup = com.github.eaghayi.clusterusages
 pluginName = cluster-usages
 pluginVersion = 0.0.1
 pluginSinceBuild = 202
-pluginUntilBuild = 203.*
+pluginUntilBuild = 212.*
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
-pluginVerifierIdeVersions = 2020.2.4, 2020.3.2, 2021.1
+pluginVerifierIdeVersions = 2020.2.4, 2020.3.2, 2021.1, 2021.2
 
 platformType = IC
 platformVersion = 2020.2.4
