--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,3 +1,9 @@
 name=My Plugin
 applicationService=Application service
 projectService=Project service: {0}
+usage.type.if=In If/Else
+usage.type.try= In Try/Catch
+usage.type.loop= In loop
+usage.type.return= In return
+usage.type.reference.expr= In reference expression
+usage.type.expr= In expression
