--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -2,8 +2,11 @@ name=My Plugin
 applicationService=Application service
 projectService=Project service: {0}
 usage.type.if=In If/Else
-usage.type.try= In Try/Catch
-usage.type.loop= In loop
+usage.type.declaration=In declaration
+usage.type.assert=In assertion
+usage.type.try=In Try/Catch
+usage.type.loop=In loop
 usage.type.return= In return
 usage.type.reference.expr= In reference expression
-usage.type.expr= In expression
+usage.type.expr=In expression
+usage.type.field=In field
