--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,7 +11,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <usageGroupingRuleProvider implementation="gui.UniqueGroupingRuleProvider"/>
-        <usageTypeProvider implementation="gui.UniqueUsageTypeProvider"/>
+<!--        <usageTypeProvider implementation="gui.UniqueUsageTypeProvider"/>-->
     </extensions>
 
 <!--    <extensions defaultExtensionNs="com.intellij">-->
